[gd_scene load_steps=12 format=3 uid="uid://ch1fchvq8pb2v"]

[ext_resource type="Script" path="res://core/player_swing.gd" id="1_o7a6y"]
[ext_resource type="Texture2D" uid="uid://cwhw73yxiaxh5" path="res://core/sprites/Sword_Swing.png" id="3_e7i2p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_evj8g"]
radius = 40.0
height = 140.1

[sub_resource type="AtlasTexture" id="AtlasTexture_dptdr"]
atlas = ExtResource("3_e7i2p")
region = Rect2(0, 0, 140, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpwvf"]
atlas = ExtResource("3_e7i2p")
region = Rect2(140, 0, 140, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpq5c"]
atlas = ExtResource("3_e7i2p")
region = Rect2(280, 0, 140, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tasar"]
atlas = ExtResource("3_e7i2p")
region = Rect2(0, 96, 140, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieqtv"]
atlas = ExtResource("3_e7i2p")
region = Rect2(140, 96, 140, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykanm"]
atlas = ExtResource("3_e7i2p")
region = Rect2(280, 96, 140, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bosr0"]
atlas = ExtResource("3_e7i2p")
region = Rect2(140, 192, 140, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_o2piw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dptdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpwvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpq5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tasar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieqtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykanm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bosr0")
}],
"loop": false,
"name": &"default",
"speed": 48.0
}]

[node name="PlayerSwing" type="Node2D" groups=["PlayerBasicAttack"]]
script = ExtResource("1_o7a6y")

[node name="Area2D" type="Area2D" parent="." groups=["PlayerBasicAttack"]]

[node name="DamageArea" type="CollisionShape2D" parent="Area2D" groups=["PlayerBasicAttack", "PlayerParry"]]
position = Vector2(64, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_evj8g")

[node name="SwingHolder" type="Node2D" parent="."]
position = Vector2(0, -56)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SwingHolder"]
texture_filter = 3
position = Vector2(70, 0)
sprite_frames = SubResource("SpriteFrames_o2piw")
autoplay = "default"
frame = 6
frame_progress = 1.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="SwingHolder/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
